{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 231,
  "lineage": "eca92316-3554-1771-ac66-6c56dfb8fd0e",
  "resources": [
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f214d1b3d031dc53",
            "arn": "arn:aws:ec2:us-east-1:804295906245:instance/i-08f4c0fd94de1587a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:804295906245:key/b468bc40-35cf-4b1e-9502-344a31df27f2",
                "tags": {
                  "AutoTag_CreateTime": "2025-02-13T05:53:24Z",
                  "AutoTag_Creator": "arn:aws:iam::804295906245:user/archit-terraform-archit",
                  "AutoTag_UserName": "archit-terraform-archit",
                  "owner": "archit-terraform-archit"
                },
                "tags_all": {
                  "AutoTag_CreateTime": "2025-02-13T05:53:24Z",
                  "AutoTag_Creator": "arn:aws:iam::804295906245:user/archit-terraform-archit",
                  "AutoTag_UserName": "archit-terraform-archit",
                  "owner": "archit-terraform-archit"
                },
                "throughput": 125,
                "volume_id": "vol-027fca8b4b13dc328",
                "volume_size": 20,
                "volume_type": "gp3"
              },
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdc",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:804295906245:key/b468bc40-35cf-4b1e-9502-344a31df27f2",
                "tags": {
                  "AutoTag_CreateTime": "2025-02-13T05:53:24Z",
                  "AutoTag_Creator": "arn:aws:iam::804295906245:user/archit-terraform-archit",
                  "AutoTag_UserName": "archit-terraform-archit",
                  "owner": "archit-terraform-archit"
                },
                "tags_all": {
                  "AutoTag_CreateTime": "2025-02-13T05:53:24Z",
                  "AutoTag_Creator": "arn:aws:iam::804295906245:user/archit-terraform-archit",
                  "AutoTag_UserName": "archit-terraform-archit",
                  "owner": "archit-terraform-archit"
                },
                "throughput": 125,
                "volume_id": "vol-0c3cd35539feeb1cb",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08f4c0fd94de1587a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b8000bda5ce73336",
            "private_dns": "ip-10-1-1-129.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.129",
            "public_ip": "34.238.233.80",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:804295906245:key/b468bc40-35cf-4b1e-9502-344a31df27f2",
                "tags": {
                  "AutoTag_CreateTime": "2025-02-13T05:53:24Z",
                  "AutoTag_Creator": "arn:aws:iam::804295906245:user/archit-terraform-archit",
                  "AutoTag_UserName": "archit-terraform-archit",
                  "owner": "archit-terraform-archit"
                },
                "tags_all": {
                  "AutoTag_CreateTime": "2025-02-13T05:53:24Z",
                  "AutoTag_Creator": "arn:aws:iam::804295906245:user/archit-terraform-archit",
                  "AutoTag_UserName": "archit-terraform-archit",
                  "owner": "archit-terraform-archit"
                },
                "throughput": 0,
                "volume_id": "vol-00a386de54ac5d210",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07626f7c00f5897c5",
            "tags": {
              "AutoTag_CreateTime": "2025-02-13T05:53:24Z",
              "AutoTag_Creator": "arn:aws:iam::804295906245:user/archit-terraform-archit",
              "AutoTag_UserName": "archit-terraform-archit",
              "Name": "archit-ec2",
              "owner": "archit-terraform-archit"
            },
            "tags_all": {
              "AutoTag_CreateTime": "2025-02-13T05:53:24Z",
              "AutoTag_Creator": "arn:aws:iam::804295906245:user/archit-terraform-archit",
              "AutoTag_UserName": "archit-terraform-archit",
              "Name": "archit-ec2",
              "owner": "archit-terraform-archit"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00813f82569a7acbd"
            ]
          },
          "dependencies": [
            "module.ec2_instance.aws_security_group.ec2_sg",
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route.private",
            "module.network.aws_route.public",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:security-group/sg-00813f82569a7acbd",
            "description": "Security group for EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00813f82569a7acbd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "archit-sg",
            "name_prefix": "",
            "owner_id": "804295906245",
            "revoke_rules_on_delete": false,
            "tags": {
              "AutoTag_CreateTime": "2025-02-13T05:53:17Z",
              "AutoTag_Creator": "arn:aws:iam::804295906245:user/archit-terraform-archit",
              "AutoTag_UserName": "archit-terraform-archit",
              "Name": "archit-sg"
            },
            "tags_all": {
              "AutoTag_CreateTime": "2025-02-13T05:53:17Z",
              "AutoTag_Creator": "arn:aws:iam::804295906245:user/archit-terraform-archit",
              "AutoTag_UserName": "archit-terraform-archit",
              "Name": "archit-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-020a3078572c1cf2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route.private",
            "module.network.aws_route.public",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0473f54c68b32346e",
            "arn": "arn:aws:ec2:us-east-1:804295906245:elastic-ip/eipalloc-0473f54c68b32346e",
            "domain": "vpc",
            "id": "eipalloc-0473f54c68b32346e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-5-87-45.compute-1.amazonaws.com",
            "public_ip": "52.5.87.45",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prod-network-nat-eip-archit"
            },
            "tags_all": {
              "Name": "prod-network-nat-eip-archit"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:internet-gateway/igw-071b9db35ce2b2828",
            "id": "igw-071b9db35ce2b2828",
            "owner_id": "804295906245",
            "tags": {
              "Name": "prod-network-igw-archit"
            },
            "tags_all": {
              "Name": "prod-network-igw-archit"
            },
            "vpc_id": "vpc-020a3078572c1cf2b"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0473f54c68b32346e",
            "association_id": "eipassoc-0ba1a948d834685fa",
            "connectivity_type": "public",
            "id": "nat-0921067f734a1c934",
            "network_interface_id": "eni-0104daf53e4bb0c86",
            "private_ip": "10.1.1.187",
            "public_ip": "52.5.87.45",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07626f7c00f5897c5",
            "tags": {
              "AutoTag_CreateTime": "2025-02-13T05:51:06Z",
              "AutoTag_Creator": "arn:aws:iam::804295906245:user/archit-terraform-archit",
              "AutoTag_UserName": "archit-terraform-archit",
              "Name": "prod-network-nat-gw-archit"
            },
            "tags_all": {
              "AutoTag_CreateTime": "2025-02-13T05:51:06Z",
              "AutoTag_Creator": "arn:aws:iam::804295906245:user/archit-terraform-archit",
              "AutoTag_UserName": "archit-terraform-archit",
              "Name": "prod-network-nat-gw-archit"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-061a20c0fb41810981080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0921067f734a1c934",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-061a20c0fb4181098",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-071b9db35ce2b2828",
            "id": "r-rtb-0694b7ff2a6047af71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0694b7ff2a6047af7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_route_table.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:route-table/rtb-061a20c0fb4181098",
            "id": "rtb-061a20c0fb4181098",
            "owner_id": "804295906245",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prod-network-private-rt-archit"
            },
            "tags_all": {
              "Name": "prod-network-private-rt-archit"
            },
            "timeouts": null,
            "vpc_id": "vpc-020a3078572c1cf2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:route-table/rtb-0694b7ff2a6047af7",
            "id": "rtb-0694b7ff2a6047af7",
            "owner_id": "804295906245",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prod-network-public-rt-archit"
            },
            "tags_all": {
              "Name": "prod-network-public-rt-archit"
            },
            "timeouts": null,
            "vpc_id": "vpc-020a3078572c1cf2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7de0eb8423d7ef9",
            "route_table_id": "rtb-061a20c0fb4181098",
            "subnet_id": "subnet-08bacc3f7fea179ce"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066d637045cd9ed21",
            "route_table_id": "rtb-061a20c0fb4181098",
            "subnet_id": "subnet-0418b1919e3cebffc"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0000f5ca5064306e6",
            "route_table_id": "rtb-0694b7ff2a6047af7",
            "subnet_id": "subnet-07626f7c00f5897c5"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0570714dbd53db39c",
            "route_table_id": "rtb-0694b7ff2a6047af7",
            "subnet_id": "subnet-096dbe4b2ad213f9f"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:subnet/subnet-08bacc3f7fea179ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08bacc3f7fea179ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804295906245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-network-private-subnet-1-archit"
            },
            "tags_all": {
              "Name": "prod-network-private-subnet-1-archit"
            },
            "vpc_id": "vpc-020a3078572c1cf2b"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:subnet/subnet-0418b1919e3cebffc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0418b1919e3cebffc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804295906245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-network-private-subnet-2-archit"
            },
            "tags_all": {
              "Name": "prod-network-private-subnet-2-archit"
            },
            "vpc_id": "vpc-020a3078572c1cf2b"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:subnet/subnet-07626f7c00f5897c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07626f7c00f5897c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804295906245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-network-public-subnet-1-archit"
            },
            "tags_all": {
              "Name": "prod-network-public-subnet-1-archit"
            },
            "vpc_id": "vpc-020a3078572c1cf2b"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:subnet/subnet-096dbe4b2ad213f9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096dbe4b2ad213f9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804295906245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-network-public-subnet-2-archit"
            },
            "tags_all": {
              "Name": "prod-network-public-subnet-2-archit"
            },
            "vpc_id": "vpc-020a3078572c1cf2b"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:vpc/vpc-020a3078572c1cf2b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-012a94b4979e60a1e",
            "default_route_table_id": "rtb-03d03c5f1b28b072f",
            "default_security_group_id": "sg-019d0ef5f6f956945",
            "dhcp_options_id": "dopt-a6babfdd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-020a3078572c1cf2b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03d03c5f1b28b072f",
            "owner_id": "804295906245",
            "tags": {
              "Name": "prod-network-vpc-archit"
            },
            "tags_all": {
              "Name": "prod-network-vpc-archit"
            }
          }
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:security-group/sg-008ea8c4c4fbde0ca",
            "description": "Security group for RDS instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-008ea8c4c4fbde0ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.1.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "archit-rds-sg",
            "name_prefix": "",
            "owner_id": "804295906245",
            "revoke_rules_on_delete": false,
            "tags": {
              "AutoTag_CreateTime": "2025-02-13T05:53:39Z",
              "AutoTag_Creator": "arn:aws:iam::804295906245:user/archit-terraform-archit",
              "AutoTag_UserName": "archit-terraform-archit",
              "Name": "archit-rds-sg"
            },
            "tags_all": {
              "AutoTag_CreateTime": "2025-02-13T05:53:39Z",
              "AutoTag_Creator": "arn:aws:iam::804295906245:user/archit-terraform-archit",
              "AutoTag_UserName": "archit-terraform-archit",
              "Name": "archit-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-020a3078572c1cf2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_instance.aws_instance.ec2",
            "module.ec2_instance.aws_security_group.ec2_sg",
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route.private",
            "module.network.aws_route.public",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}